# anthos-worlds

./: .gitignore  README.md  pyproject.toml
anthos_worlds/: __init__.py  agents.py  bench.py  cli.py  core.py  oracle.py
anthos_worlds/envs/: __init__.py  calendar.py  email.py  helpdesk.py  quest.py  shop.py  terminal.py  warehouse.py
tests/: test_worlds.py
